syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 1779
// EnetChannelId: 0
// EnetIsReliable: true
message AvatarUpgradeRsp {
	int32 retcode = 6;
	uint64 avatar_guid = 15;
	uint32 old_level = 5;
	uint32 cur_level = 7;
	map<uint32, float> old_fight_prop_map = 2;
	map<uint32, float> cur_fight_prop_map = 4;
}
